Add recipes/nanowave-pulse-generator.html and provide link in index.html

--- a/recipes/nanowave-pulse-generator.html
+++ b/recipes/nanowave-pulse-generator.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes: Nanowave Pulse Generator</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a>Nanowave Pulse Generator</a>
+        <h1>Nanowave Pulse Generator</h1>
     </body>
 </html>
