--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a>Nanowave Pulse Generator</a>
+        <a href="recipes/nanowave-pulse-generator.html">Nanowave Pulse Generator</a>
     </body>
 </html>
