Add image for nanowave field generator

--- a/recipes/nanowave-pulse-generator.html
+++ b/recipes/nanowave-pulse-generator.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Nanowave Pulse Generator</h1>
+        <img src="../images/nanowave-field-generator.png" alt="Picture of a nanowave field generator">
     </body>
 </html>
