Add chlorine ray and temporal anomaly recipes. Note that these contain links to currently missing images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/nanowave-pulse-generator.html">Nanowave Pulse Generator</a>
+        <ul>
+            <li><a href="recipes/nanowave-pulse-generator.html">Nanowave Pulse Generator</a></li>
+            <li><a href="recipes/chlorine-ray.html">Chlorine Ray</a></li>
+            <li><a href="recipes/temporal-anomaly.html">Temporal Anomaly</a></li>
+        </ul>
     </body>
 </html>
