--- a/recipes/chlorine-ray.html
+++ b/recipes/chlorine-ray.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Chlorine Ray</h1>
-        <img src="../images/chlorine-.png" alt="Picture of a chlorine ray">
+        <img src="../images/chlorine-ray.png" alt="Picture of a chlorine ray">
     </body>
 </html>
