Add additional headings and empty paragraphs/lists

--- a/recipes/nanowave-pulse-generator.html
+++ b/recipes/nanowave-pulse-generator.html
@@ -7,5 +7,18 @@
     <body>
         <h1>Nanowave Pulse Generator</h1>
         <img src="../images/nanowave-field-generator.png" alt="Picture of a nanowave field generator">
+
+        <h2>Description</h2>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul>
+
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+
+        </ol>
     </body>
 </html>
