--- a/recipes/chlorine-ray.html
+++ b/recipes/chlorine-ray.html
@@ -7,5 +7,18 @@
     <body>
         <h1>Chlorine Ray</h1>
         <img src="../images/chlorine-ray.png" alt="Picture of a chlorine ray">
+
+        <h2>Description</h2>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul>
+
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            
+        </ol>
     </body>
 </html>
