--- a/recipes/temporal-anomaly.html
+++ b/recipes/temporal-anomaly.html
@@ -7,5 +7,18 @@
     <body>
         <h1>Temporal Anomaly</h1>
         <img src="../images/temporal-anomaly.png" alt="Picture of a temporal anomaly">
+
+        <h2>Description</h2>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul>
+
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            
+        </ol>
     </body>
 </html>
