Finish recipes/chlorine-ray.html

--- a/recipes/chlorine-ray.html
+++ b/recipes/chlorine-ray.html
@@ -9,16 +9,29 @@
         <img src="../images/chlorine-ray.png" alt="Picture of a chlorine ray">
 
         <h2>Description</h2>
-        <p></p>
+        <p>
+            Chlorine rays were once a delicacy for the Odins, representing the finest delicacy possible.
+            However this changed after the discovery of SYH-027485, a dimension consisting entirely of chlorine.
+            The Chlorine cartel tried to prevent knowledge of this dimension from entering the general population,
+            however the effort was mostly futile. Modern day Odin's regard the food as disgusting, however the food
+            is still used in Odin rituals due to it's prior status as a product of luxury. This has been a continued
+            barrier for Odin's attempting to increase their social cast.
+        </p>
 
         <h2>Ingredients</h2>
         <ul>
-
+            <li>10 High Value Analyzers</li>
+            <li>7 Optical Waneshafts</li>
+            <li>3000 kg Liquefied Chlorine</li>
+            <li>1 g Catylitic Assemblers</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            
+            <li>Insert the liquefied chlorine into a vyelf converter.</li>
+            <li>Slowly insert the catylitic assemblers over 1 hour.</li>
+            <li>Insert waneshafts. These should begin to assemble immediately.</li>
+            <li>Now add the high value analyzers. Be careful to ensure that there are never more then two anassembled analyzers at a time.</li>
         </ol>
     </body>
 </html>
