Finish recipes/temporal-anomaly.html

--- a/recipes/temporal-anomaly.html
+++ b/recipes/temporal-anomaly.html
@@ -9,16 +9,32 @@
         <img src="../images/temporal-anomaly.png" alt="Picture of a temporal anomaly">
 
         <h2>Description</h2>
-        <p></p>
+        <p>
+            Temporal anomalies were once so common that not even the Red Hands considered to stockpile any.
+            Due to an enemy currently unknown to all but the most powerful Odins, the supply of temporal anomalies
+            has almost been completely eliminated. While temporal anomalies was previously the largest component of
+            the diet of any Odin, the unavailability for the last 7198 years has prevented anyone but the highest
+            casts from consuming the substance. This is the currently the only known method of producing temporal 
+            anomalies, however Odin scientists are working tirelessly to reduce the cost of artificial anomaly production.
+        </p>
 
         <h2>Ingredients</h2>
         <ul>
-
+            <li>7999999998 Ates Rods</li>
+            <li>1543333 kg Anda Fluid</li>
+            <li>0.0007 Ondes Catalysts</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            
+            <li>
+                Mix the Anda Fluid and Ondes Catalysts. 
+                Note that a small mismatch in quantity of ingredients will produce a dangerous qtttre class entity.
+            </li>
+            <li>
+                Insert Anda Fluid at the rate of 19.82754 mg/h. 
+                Any modification in the rate or quantity of Anda fluid inserted will result in a dangerous thmayl class entity. 
+            </li>
         </ol>
     </body>
 </html>
