Finish recipes/nanowave-pulse-generator.html

--- a/recipes/nanowave-pulse-generator.html
+++ b/recipes/nanowave-pulse-generator.html
@@ -9,16 +9,26 @@
         <img src="../images/nanowave-field-generator.png" alt="Picture of a nanowave field generator">
 
         <h2>Description</h2>
-        <p></p>
+        <p>
+            Due to the unavailability of temporal anomalies, psyphonic mutation has been attempted
+            in some individuals to allow energizing via nanowave pulse generators. The process of
+            using a nanowave pulse is involved and complicated, hence the existence of this recipe.
+        </p>
 
         <h2>Ingredients</h2>
         <ul>
-
+            <li>2 Gigawatt Energy Conduits</li>
+            <li>3 Nanowave Pulse Beams</li>
+            <li>7 Sidefumbling Prevention Arms</li>
+            <li>1 Micro Encabulator (Can be replaced with older Turbo Encabulator in a pinch)</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-
+            <li>Use the first energy conduit to power up the micro encabulator.</li>
+            <li>Utilize the 7 sidefumbling prevention arms in sockets 7, 9, and 13.</li>
+            <li>Connect nanowave pulse beams.</li>
+            <li>Connect nanowave pulse beams to the second gigawatt energy conduit.</li>
         </ol>
     </body>
 </html>
