--- a/recipes/nanowave-pulse-generator.html
+++ b/recipes/nanowave-pulse-generator.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes: Nanowave Pulse Generator</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Nanowave Pulse Generator</h1>
