--- a/recipes/temporal-anomaly.html
+++ b/recipes/temporal-anomaly.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes: Temporal Anomaly</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Temporal Anomaly</h1>
